@@ -1,3 +1,8 @@
+2008-09-11  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-remote-connect-dialog.c:
+	  Translators warning added
+
 2008-09-01  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-prefs.c: (fill_props_model):
